Litlle fix in action workflow

--- a/.github/workflows/Recovery-Compiler.yaml
+++ b/.github/workflows/Recovery-Compiler.yaml
@@ -35,7 +35,7 @@ on:
       DEVICE_TREE_BRANCH:
         description: 'Device Tree Branch'
         required: true
-        default: 'Experimental-DevTree'
+        default: 'main'
       DEVICE_PATH:
         description: 'Specify your Device Path'
         required: true
