--- a/.github/workflows/Recovery-Compiler.yaml
+++ b/.github/workflows/Recovery-Compiler.yaml
@@ -66,42 +66,24 @@ jobs:
   Dispatch-Builds:
     runs-on: ubuntu-latest
     outputs:
-      build_ofrp: ${{ steps.set-flags.outputs.build_ofrp }}
-      build_twrp: ${{ steps.set-flags.outputs.build_twrp }}
-      build_shrp: ${{ steps.set-flags.outputs.build_shrp }}
-      build_pbrp: ${{ steps.set-flags.outputs.build_pbrp }}
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - name: Parse BUILD_RECOVERY input
-        id: set-flags
-        run: |
-          input="${{ github.event.inputs.BUILD_RECOVERY }}"
-          input=$(echo "$input" | tr '[:lower:]' '[:upper:]')
-
-          build_ofrp=false
-          build_twrp=false
-          build_shrp=false
-          build_pbrp=false
-
-          IFS=',' read -ra recs <<< "$input"
-          for r in "${recs[@]}"; do
-            r=$(echo "$r" | xargs)
-            case "$r" in
-              OFRP) build_ofrp=true ;;
-              TWRP) build_twrp=true ;;
-              SHRP) build_shrp=true ;;
-              PBRP) build_pbrp=true ;;
-            esac
-          done
-
-          echo "build_ofrp=$build_ofrp" >> $GITHUB_OUTPUT
-          echo "build_twrp=$build_twrp" >> $GITHUB_OUTPUT
-          echo "build_shrp=$build_shrp" >> $GITHUB_OUTPUT
-          echo "build_pbrp=$build_pbrp" >> $GITHUB_OUTPUT
+    - name: Generate matrix from input
+      id: set-matrix
+      run: |
+        IFS=',' read -ra types <<< "${{ github.event.inputs.BUILD_RECOVERY }}"
+        if [ ${#types[@]} -eq 0 ]; then
+          echo 'matrix=[]' >> $GITHUB_OUTPUT
+        else
+          json_array=$(printf '"%s",' "${types[@]}" | sed 's/,$//')
+          echo "matrix=[$json_array]" >> $GITHUB_OUTPUT
+        fi
+        echo "Generated matrix: $json_array"
 
   Build-OrangeFox:
     name: Build OFRP by ${{ github.actor }}
     runs-on: ubuntu-latest
-    if: needs.Dispatch-Builds.outputs.build_ofrp == 'true'
+    if: ${{ contains(toJSON(needs.Dispatch-Builds.outputs.matrix), 'OFRP') }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       CCACHE_BASEDIR: "${{ github.workspace }}"
@@ -308,7 +290,7 @@ jobs:
   Build-TWRP:
     name: Build TWRP by ${{ github.actor }}
     runs-on: ubuntu-latest
-    if: needs.Dispatch-Builds.outputs.build_twrp == 'true'
+    if: ${{ contains(toJSON(needs.Dispatch-Builds.outputs.matrix), 'TWRP') }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       CCACHE_BASEDIR: "${{ github.workspace }}"
@@ -460,7 +442,7 @@ jobs:
 
   Build-PBRP:
     name: Build PBRP by ${{ github.actor }}
-    if: needs.Dispatch-Builds.outputs.build_pbrp == 'true'
+    if: ${{ contains(toJSON(needs.Dispatch-Builds.outputs.matrix), 'PBRP') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -617,7 +599,7 @@ jobs:
 
   Build-SHRP:
     name: Build SHRP by ${{ github.actor }}
-    if: needs.Dispatch-Builds.outputs.build_shrp == 'true'
+    if: ${{ contains(toJSON(needs.Dispatch-Builds.outputs.matrix), 'SHRP') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
